# MaxPlusAlgebra_TK_ABC_MN

./: MaxPlus-Algebra-package-introduce-TexMacs.tm  README.md
Cmake_Ninja/: CMake.bat  CMakeLists.txt  main.cpp  ninja.bat  readme.txt
VS2019/: MaxPlus_ABC - Copy.cpp  MaxPlus_ABC.sln  MaxPlus_ABC.vcxproj  MaxPlus_ABC.vcxproj.filters
VS2019/Debug/: MaxPlus_ABC.ilk  MaxPlus_ABC.vcxproj.FileListAbsolute.txt  maxplus_abc.obj.enc  vc142.idb
VS2019/Debug/MaxPlus_ABC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MaxPlus_ABC.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
max-plus-ABC-octave/: COPYING  DESCRIPTION  INDEX
max-plus-ABC-octave/inst/: Dijk.m  MP_AKpower.m  MP_KT2MN.m  MP_MaPlusMb.m  MP_MaTimesMb.m  MP_MaValue.m  MP_Mastar.m  MP_RealNumberPlus.m  MP_RealNumberTimes.m  T2ABCmatrix.m  data.m  run-Octave-m.bat  save_data_test.h5  task_test.m
